--- a/TSF_UnicornV_JetRails.ipynb
+++ b/TSF_UnicornV_JetRails.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=maroon>Time Series Forecasting</font>\n",
+    "# Time Series Forecasting\n",
     "\n",
     "Time series - Data collected over time and is dependent on it\n",
     "Eg. Stock prices, Pollution level, Visitors in park, etc"
